--- a/.github/workflows/android_build_action.yml
+++ b/.github/workflows/android_build_action.yml
@@ -31,5 +31,5 @@ jobs:
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
         with:
-          name: num_calendar
+          name: num_calendar.apk
           path: build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk
