--- a/.github/workflows/android_build_action.yml
+++ b/.github/workflows/android_build_action.yml
@@ -26,7 +26,7 @@ jobs:
       - run: flutter pub get
 
       # Build apk.
-      - run: flutter build apk --split-per-abi -t lib/main.dart
+      - run: flutter build apk --release -t lib/main.dart
 
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
